# ai-spark-performance-coach

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SETUP_GITHUB.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: generate_spark_log.py  generate_spark_log_simple.py  sample_usage.md
src/ai_spark_coach/: __init__.py  ai_coach.py  cli.py  rules.py  spark_log_parser.py
